--- a/genindex.html
+++ b/genindex.html
@@ -455,10 +455,10 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.core_calculations.compute_properties_metastable_rhoT">compute_properties_metastable_rhoT() (in module barotropy.properties.core_calculations)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_property_grid">compute_property_grid() (in module barotropy.properties.fluid_properties)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_property_grid_rhoT">compute_property_grid_rhoT() (in module barotropy.properties.fluid_properties)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_pseudocritical_line">compute_pseudocritical_line() (in module barotropy.properties.fluid_properties)</a>
@@ -472,6 +472,8 @@ document.write(`
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_spinodal_point">compute_spinodal_point() (in module barotropy.properties.fluid_properties)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_spinodal_point_general">compute_spinodal_point_general() (in module barotropy.properties.fluid_properties)</a>
+</li>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.contains_any_error_ignore_spaces">contains_any_error_ignore_spaces() (in module barotropy.fluent_automation.fluent_automation)</a>
 </li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.convert_configuration_options">convert_configuration_options() (in module barotropy.utilities)</a>
 </li>
@@ -592,6 +594,10 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.FluidState.keys">keys() (barotropy.properties.fluid_properties.FluidState method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.kill_fluent">kill_fluent() (in module barotropy.fluent_automation.fluent_automation)</a>
 </li>
   </ul></td>
 </tr></table>
