--- a/genindex.html
+++ b/genindex.html
@@ -331,31 +331,11 @@ document.write(`
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.barotropic_model_one_component">barotropic_model_one_component() (in module barotropy.barotropic_model)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.barotropic_model_two_component">barotropic_model_two_component() (in module barotropy.barotropic_model)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel">BarotropicModel (class in barotropy.barotropic_model)</a>
-</li>
       <li>
     barotropy
 
       <ul>
         <li><a href="index.html#module-barotropy">module</a>
-</li>
-      </ul></li>
-      <li>
-    barotropy.barotropic_model
-
-      <ul>
-        <li><a href="source/api/barotropy.barotropic_model.html#module-barotropy.barotropic_model">module</a>
-</li>
-      </ul></li>
-      <li>
-    barotropy.fluent_automation
-
-      <ul>
-        <li><a href="source/api/barotropy.fluent_automation.html#module-barotropy.fluent_automation">module</a>
 </li>
       </ul></li>
       <li>
@@ -379,8 +359,6 @@ document.write(`
         <li><a href="source/api/barotropy.fluent_automation.stream_residuals.html#module-barotropy.fluent_automation.stream_residuals">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     barotropy.fluent_automation.stream_transcript
 
@@ -388,13 +366,8 @@ document.write(`
         <li><a href="source/api/barotropy.fluent_automation.stream_transcript.html#module-barotropy.fluent_automation.stream_transcript">module</a>
 </li>
       </ul></li>
-      <li>
-    barotropy.graphics
-
-      <ul>
-        <li><a href="source/api/barotropy.graphics.html#module-barotropy.graphics">module</a>
-</li>
-      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     barotropy.math
 
@@ -455,10 +428,10 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid.compute_properties_meanline">compute_properties_meanline() (barotropy.properties.fluid_properties.Fluid method)</a>
 </li>
-      <li><a href="source/api/barotropy.properties.html#barotropy.properties.core_calculations.compute_properties_metastable_rhoT">compute_properties_metastable_rhoT() (in module barotropy.properties.core_calculations)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/barotropy.properties.html#barotropy.properties.core_calculations.compute_properties_metastable_rhoT">compute_properties_metastable_rhoT() (in module barotropy.properties.core_calculations)</a>
+</li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_property_grid">compute_property_grid() (in module barotropy.properties.fluid_properties)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.compute_property_grid_rhoT">compute_property_grid_rhoT() (in module barotropy.properties.fluid_properties)</a>
@@ -481,10 +454,6 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.cosd">cosd() (in module barotropy.math)</a>
 </li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.create_gif">create_gif() (in module barotropy.graphics)</a>
-</li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.create_mp4">create_mp4() (in module barotropy.graphics)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -501,27 +470,11 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.ensure_iterable">ensure_iterable() (in module barotropy.utilities)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.evaluate_constraints">evaluate_constraints() (in module barotropy.utilities)</a>
 </li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.evaluate_objective_function">evaluate_objective_function() (in module barotropy.utilities)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.evaluate_polynomial">evaluate_polynomial() (barotropy.barotropic_model.PolynomialFitter method)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.export_expressions_cfx">export_expressions_cfx() (barotropy.barotropic_model.BarotropicModel method)</a>
-
-      <ul>
-        <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.export_expressions_cfx">(barotropy.barotropic_model.ExpressionExporter method)</a>
-</li>
-      </ul></li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.export_expressions_fluent">export_expressions_fluent() (barotropy.barotropic_model.BarotropicModel method)</a>
-
-      <ul>
-        <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.export_expressions_fluent">(barotropy.barotropic_model.ExpressionExporter method)</a>
-</li>
-      </ul></li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter">ExpressionExporter (class in barotropy.barotropic_model)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -529,16 +482,10 @@ document.write(`
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.fit_polynomials">fit_polynomials() (barotropy.barotropic_model.BarotropicModel method)</a>
-
-      <ul>
-        <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.fit_polynomials">(barotropy.barotropic_model.PolynomialFitter method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid">Fluid (class in barotropy.properties.fluid_properties)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.FluidState.fluid_name">fluid_name (barotropy.properties.fluid_properties.FluidState attribute)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.FluidState">FluidState (class in barotropy.properties.fluid_properties)</a>
@@ -549,11 +496,11 @@ document.write(`
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.generate_expressions">generate_expressions() (barotropy.barotropic_model.ExpressionExporter method)</a>
-</li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.generic_plot_distribution">generic_plot_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.FluidState.get">get() (barotropy.properties.fluid_properties.FluidState method)</a>
+</li>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.get_fluent_zone_table">get_fluent_zone_table() (in module barotropy.fluent_automation.fluent_automation)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid.get_property">get_property() (barotropy.properties.fluid_properties.Fluid method)</a>
 </li>
@@ -573,8 +520,6 @@ document.write(`
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.if_expression">if_expression() (barotropy.barotropic_model.ExpressionExporter method)</a>
-</li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.is_even">is_even() (in module barotropy.math)</a>
 </li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.is_float">is_float() (in module barotropy.utilities)</a>
@@ -611,10 +556,6 @@ document.write(`
       <ul>
         <li><a href="index.html#module-barotropy">barotropy</a>
 </li>
-        <li><a href="source/api/barotropy.barotropic_model.html#module-barotropy.barotropic_model">barotropy.barotropic_model</a>
-</li>
-        <li><a href="source/api/barotropy.fluent_automation.html#module-barotropy.fluent_automation">barotropy.fluent_automation</a>
-</li>
         <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#module-barotropy.fluent_automation.fluent_automation">barotropy.fluent_automation.fluent_automation</a>
 </li>
         <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#module-barotropy.fluent_automation.fluent_plot_nozzle_data">barotropy.fluent_automation.fluent_plot_nozzle_data</a>
@@ -622,8 +563,6 @@ document.write(`
         <li><a href="source/api/barotropy.fluent_automation.stream_residuals.html#module-barotropy.fluent_automation.stream_residuals">barotropy.fluent_automation.stream_residuals</a>
 </li>
         <li><a href="source/api/barotropy.fluent_automation.stream_transcript.html#module-barotropy.fluent_automation.stream_transcript">barotropy.fluent_automation.stream_transcript</a>
-</li>
-        <li><a href="source/api/barotropy.graphics.html#module-barotropy.graphics">barotropy.graphics</a>
 </li>
         <li><a href="source/api/barotropy.math.html#module-barotropy.math">barotropy.math</a>
 </li>
@@ -648,15 +587,7 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_nozzle_xy_data">plot_nozzle_xy_data() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_phase_diagram">plot_phase_diagram() (barotropy.barotropic_model.PolynomialFitter method)</a>
-
-      <ul>
-        <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid.plot_phase_diagram">(barotropy.properties.fluid_properties.Fluid method)</a>
-</li>
-      </ul></li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_polynomial">plot_polynomial() (barotropy.barotropic_model.PolynomialFitter method)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter.plot_polynomial_and_error">plot_polynomial_and_error() (barotropy.barotropic_model.PolynomialFitter method)</a>
+      <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.Fluid.plot_phase_diagram">plot_phase_diagram() (barotropy.properties.fluid_properties.Fluid method)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_pressure_distribution">plot_pressure_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
@@ -666,33 +597,23 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_speed_sound_distribution">plot_speed_sound_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
-      <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_vapor_quality_distribution">plot_vapor_quality_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_vapor_quality_distribution">plot_vapor_quality_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
+</li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_velocity_distribution">plot_velocity_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_viscosity_distribution">plot_viscosity_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_void_fraction_distribution">plot_void_fraction_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
 </li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.plot_xy_data">plot_xy_data() (in module barotropy.graphics)</a>
-</li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_plot_nozzle_data.html#barotropy.fluent_automation.fluent_plot_nozzle_data.plot_yplus_distribution">plot_yplus_distribution() (in module barotropy.fluent_automation.fluent_plot_nozzle_data)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.ExpressionExporter.polynomial_expression">polynomial_expression() (barotropy.barotropic_model.ExpressionExporter method)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.PolynomialFitter">PolynomialFitter (class in barotropy.barotropic_model)</a>
 </li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.postprocess_ode">postprocess_ode() (in module barotropy.utilities)</a>
 </li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.print_dict">print_dict() (in module barotropy.utilities)</a>
 </li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.print_installed_fonts">print_installed_fonts() (in module barotropy.graphics)</a>
-</li>
       <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.print_object">print_object() (in module barotropy.utilities)</a>
-</li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.print_rc_parameters">print_rc_parameters() (in module barotropy.graphics)</a>
 </li>
       <li><a href="source/api/barotropy.fluent_automation.fluent_automation.html#barotropy.fluent_automation.fluent_automation.print_transcript_real_time">print_transcript_real_time() (in module barotropy.fluent_automation.fluent_automation)</a>
 </li>
@@ -724,17 +645,7 @@ document.write(`
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.savefig_in_formats">savefig_in_formats() (in module barotropy.graphics)</a>
-
-      <ul>
-        <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.savefig_in_formats">(in module barotropy.utilities)</a>
-</li>
-      </ul></li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.scale_graphics_x">scale_graphics_x() (in module barotropy.graphics)</a>
-</li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.scale_graphics_y">scale_graphics_y() (in module barotropy.graphics)</a>
-</li>
-      <li><a href="source/api/barotropy.graphics.html#barotropy.graphics.set_plot_options">set_plot_options() (in module barotropy.graphics)</a>
+      <li><a href="source/api/barotropy.utilities.html#barotropy.utilities.savefig_in_formats">savefig_in_formats() (in module barotropy.utilities)</a>
 </li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.sigmoid_hyperbolic">sigmoid_hyperbolic() (in module barotropy.math)</a>
 </li>
@@ -742,10 +653,10 @@ document.write(`
 </li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.sigmoid_smootherstep">sigmoid_smootherstep() (in module barotropy.math)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.math.html#barotropy.math.sigmoid_smoothstep">sigmoid_smoothstep() (in module barotropy.math)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/api/barotropy.math.html#barotropy.math.sind">sind() (in module barotropy.math)</a>
 </li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.smooth_abs">smooth_abs() (in module barotropy.math)</a>
@@ -753,8 +664,6 @@ document.write(`
       <li><a href="source/api/barotropy.math.html#barotropy.math.smooth_maximum">smooth_maximum() (in module barotropy.math)</a>
 </li>
       <li><a href="source/api/barotropy.math.html#barotropy.math.smooth_minimum">smooth_minimum() (in module barotropy.math)</a>
-</li>
-      <li><a href="source/api/barotropy.barotropic_model.html#barotropy.barotropic_model.BarotropicModel.solve">solve() (barotropy.barotropic_model.BarotropicModel method)</a>
 </li>
       <li><a href="source/api/barotropy.properties.html#barotropy.properties.fluid_properties.states_to_dict">states_to_dict() (in module barotropy.properties.fluid_properties)</a>
 </li>
